# TicketDesk

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
tests/: test_settings_store.py
ticket_app/: __main__.py  config.py  main.py
ticket_app/db/: database.py  models.py  repositories.py
ticket_app/services/: note_service.py  postit_service.py  theme_service.py  ticket_service.py
ticket_app/ui/: command_palette.py  kanban_dialog.py  main_window.py  notes_panel.py  postit_board.py  postit_edit_dialog.py  settings_dialog.py  ticket_detail_panel.py  ticket_filter_proxy.py  ticket_form_dialog.py  ticket_table_model.py
ticket_app/utils/: i18n.py  logging_utils.py  settings_store.py  theme_manager.py
ui/: notes_panel.py  postit_board.py  ticket_form_dialog.py
utils/: datetime_utils.py  logging_utils.py
